--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
     <h1>this is my girst git heading</h1>
     <P>second</P>
+    <p>third comiit</p>
+    <p>latest commit</p>
 
 </body>
 </html>
